# research_repo_template

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  environment.yml  noxfile.py  pyproject.toml
src/projectname/: __init__.py  module1.py
tests/: test_module1.py  test_package.py
